fontconfig: use Twitter Color Emoji instead of EmojiOne Color

--- a/fonts.conf
+++ b/fonts.conf
@@ -22,7 +22,7 @@
         <family>serif</family>
         <prefer>
             <family>Noto Serif</family>
-            <family>EmojiOne Color</family>
+            <family>Twitter Color Emoji</family>
         </prefer>
         <default>
             <family>DejaVu Serif</family>
@@ -32,7 +32,7 @@
         <family>sans-serif</family>
         <prefer>
             <family>Noto Sans</family>
-            <family>EmojiOne Color</family>
+            <family>Twitter Color Emoji</family>
         </prefer>
         <default>
             <family>DejaVu Sans</family>
