tmux: use the new name of vi bindings copy-mode key table

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,8 @@ set -g mouse on
 
 bind -n WheelUpPane   if -Ft= "#{?mouse_any_flag,1,#{?alternate_on,1,#{pane_in_mode}}}" "select-pane -t=; send-keys -M" "select-pane -t=; copy-mode -e; send-keys -M"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -t vi-copy WheelUpPane   halfpage-up
-bind -t vi-copy WheelDownPane halfpage-down
+bind -T copy-mode-vi WheelUpPane   send -X halfpage-up
+bind -T copy-mode-vi WheelDownPane send -X halfpage-down
 
 # set prefix key to ctrl+a
 set -g prefix C-a
