--- a/mpd.conf
+++ b/mpd.conf
@@ -6,14 +6,14 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory       "~/Music"
+music_directory		"~/Music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory    "~/.local/share/mpd/playlists"
+playlist_directory		"~/.local/share/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -21,7 +21,7 @@ playlist_directory    "~/.local/share/mpd/playlists"
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file               "~/.local/share/mpd/mpd.db"
+db_file			"~/.local/share/mpd/mpd.db"
 #
 # These settings are the locations for the daemon log files for the daemon.
 # These logs are great for troubleshooting, depending on your log_level
@@ -30,25 +30,25 @@ db_file               "~/.local/share/mpd/mpd.db"
 # The special value "syslog" makes MPD use the local syslog daemon. This
 # setting defaults to logging to syslog, otherwise logging is disabled.
 #
-log_file              "~/.local/share/mpd/mpd.log"
+log_file			"~/.local/share/mpd/mpd.log"
 #
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
 # default and the pid file will not be stored.
 #
-pid_file              "~/.local/share/mpd/mpd.pid"
+pid_file			"~/.local/share/mpd/mpd.pid"
 #
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
 # it was brought down. This setting is disabled by default and the server
 # state will be reset on server start up.
 #
-state_file            "~/.local/share/mpd/state"
+state_file			"~/.local/share/mpd/state"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-# sticker_file          "~/.local/share/mpd/sticker.sql"
+#sticker_file			"~/.local/share/mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -60,70 +60,70 @@ state_file            "~/.local/share/mpd/state"
 # initialization. This setting is disabled by default and MPD is run as the
 # current user.
 #
-# user               "mpd"
+#user				"nobody"
 #
 # This setting specifies the group that MPD will run as. If not specified
 # primary group of user specified with "user" setting will be used (if set).
 # This is useful if MPD needs to be a member of group such as "audio" to
 # have permission to use sound card.
 #
-# group              "nogroup"
+#group				"nogroup"
 #
 # This setting sets the address for the daemon to listen on. Careful attention
 # should be paid if this is assigned to anything other then the default, any.
-# This setting can deny access to control of the daemon. Choose any if you want
-# to have mpd listen on every address
+# This setting can deny access to control of the daemon. Not effective if
+# systemd socket activiation is in use.
 #
 # For network
-bind_to_address    "localhost"
+bind_to_address		"localhost"
 #
 # And for Unix Socket
-# bind_to_address    "/run/mpd/socket"
+#bind_to_address		"~/.mpd/socket"
 #
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-# port               "6600"
+#port				"6600"
 #
 # This setting controls the type of information which is logged. Available
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
 # argument is recommended for troubleshooting, though can quickly stretch
 # available resources on limited hardware storage.
 #
-# log_level          "default"
+#log_level			"default"
 #
 # If you have a problem with your MP3s ending abruptly it is recommended that
 # you set this argument to "no" to attempt to fix the problem. If this solves
 # the problem, it is highly recommended to fix the MP3 files with vbrfix
-# (available as vbrfix in the debian archive), at which
+# (available from <http://www.willwap.co.uk/Programs/vbrfix.php>), at which
 # point gapless MP3 playback can be enabled.
 #
-# gapless_mp3_playback    "yes"
+#gapless_mp3_playback			"yes"
 #
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
-restore_paused     "yes"
+restore_paused "yes"
 #
 # This setting enables MPD to create playlists in a format usable by other
 # music players.
 #
-# save_absolute_paths_in_playlists    "no"
+#save_absolute_paths_in_playlists	"no"
 #
 # This setting defines a list of tag types that will be extracted during the
 # audio file discovery process. The complete list of possible values can be
-# found in the mpd.conf man page.
-metadata_to_use    "artist,albumartist,album,title,track,disc,date,genre,comment"
+# found in the user manual.
+metadata_to_use	"artist,albumartist,album,title,track,disc,date,genre,comment"
 #
 # This setting enables automatic update of MPD's database when files in
 # music_directory are changed.
 #
-# auto_update        "yes"
+#auto_update	"yes"
 #
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
 #
-# auto_update_depth       "3"
+#auto_update_depth "3"
 #
 ###############################################################################
 
@@ -133,12 +133,12 @@ metadata_to_use    "artist,albumartist,album,title,track,disc,date,genre,comment
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links outside of the configured music_directory.
 #
-# follow_outside_symlinks    "yes"
+#follow_outside_symlinks	"yes"
 #
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links inside of the configured music_directory.
 #
-# follow_inside_symlinks     "yes"
+#follow_inside_symlinks		"yes"
 #
 ###############################################################################
 
@@ -148,12 +148,12 @@ metadata_to_use    "artist,albumartist,album,title,track,disc,date,genre,comment
 # If this setting is set to "yes", service information will be published with
 # Zeroconf / Avahi.
 #
-zeroconf_enabled     "no"
+zeroconf_enabled		"no"
 #
 # The argument to this setting will be the Zeroconf / Avahi unique name for
 # this MPD server on the network.
 #
-# zeroconf_name        "Music Player"
+#zeroconf_name			"Music Player"
 #
 ###############################################################################
 
@@ -161,18 +161,18 @@ zeroconf_enabled     "no"
 # Permissions #################################################################
 #
 # If this setting is set, MPD will require password authorization. The password
-# can setting can be specified multiple times for different password profiles.
+# setting can be specified multiple times for different password profiles.
 #
-# password               "password@read,add,control,admin"
+#password                        "password@read,add,control,admin"
 #
 # This setting specifies the permissions a user has who has not yet logged in.
 #
-# default_permissions    "read,add,control,admin"
+#default_permissions             "read,add,control,admin"
 #
 ###############################################################################
 
 
-# Database ####################################################################
+# Database #######################################################################
 #
 
 #database {
@@ -185,10 +185,10 @@ zeroconf_enabled     "no"
 #
 
 input {
-    plugin "curl"
-    # proxy "proxy.isp.com:8080"
-    # proxy_user "user"
-    # proxy_password "password"
+        plugin "curl"
+#       proxy "proxy.isp.com:8080"
+#       proxy_user "user"
+#       proxy_password "password"
 }
 
 #
@@ -203,68 +203,137 @@ input {
 #
 # An example of an ALSA output:
 #
-# audio_output {
-    # type        "alsa"
-    # name        "My ALSA Device"
-    # device      "hw:0,0"        # optional
-    # mixer_type      "hardware"  # optional
-    # mixer_device    "default"   # optional
-    # mixer_control   "PCM"       # optional
-    # mixer_index     "0"         # optional
-# }
+#audio_output {
+#	type		"alsa"
+#	name		"My ALSA Device"
+##	device		"hw:0,0"	# optional
+##	mixer_type      "hardware"	# optional
+##	mixer_device	"default"	# optional
+##	mixer_control	"PCM"		# optional
+##	mixer_index	"0"		# optional
+#}
+#
+# An example of an OSS output:
+#
+#audio_output {
+#	type		"oss"
+#	name		"My OSS Device"
+##	device		"/dev/dsp"	# optional
+##	mixer_type      "hardware"	# optional
+##	mixer_device	"/dev/mixer"	# optional
+##	mixer_control	"PCM"		# optional
+#}
+#
+# An example of a shout output (for streaming to Icecast):
+#
+#audio_output {
+#	type		"shout"
+#	encoder		"vorbis"		# optional
+#	name		"My Shout Stream"
+#	host		"localhost"
+#	port		"8000"
+#	mount		"/mpd.ogg"
+#	password	"hackme"
+#	quality		"5.0"
+#	bitrate		"128"
+#	format		"44100:16:1"
+##	protocol	"icecast2"		# optional
+##	user		"source"		# optional
+##	description	"My Stream Description"	# optional
+##	url		"http://example.com"	# optional
+##	genre		"jazz"			# optional
+##	public		"no"			# optional
+##	timeout		"2"			# optional
+##	mixer_type      "software"		# optional
+#}
 #
 # An example of a recorder output:
 #
 #audio_output {
-    # type       "recorder"
-    # name       "My recorder"
-    # encoder    "vorbis"                # optional, vorbis or lame
-    # path       "/var/lib/mpd/recorder/mpd.ogg"
-    # quality    "5.0"                   # do not define if bitrate is defined
-    # bitrate    "128"                   # do not define if quality is defined
-    # format     "44100:16:1"
+#	type		"recorder"
+#	name		"My recorder"
+#	encoder		"vorbis"		# optional, vorbis or lame
+#	path		"/var/lib/mpd/recorder/mpd.ogg"
+##	quality		"5.0"			# do not define if bitrate is defined
+#	bitrate		"128"			# do not define if quality is defined
+#	format		"44100:16:1"
 #}
 #
 # An example of a httpd output (built-in HTTP streaming server):
 #
 #audio_output {
-    # type       "httpd"
-    # name       "My HTTP Stream"
-    # encoder    "vorbis"        # optional, vorbis or lame
-    # quality    "5.0"           # do not define if bitrate is defined
-    # bitrate    "128"           # do not define if quality is defined
-    # format     "44100:16:1"
-    # port       "8000"
-    # bind_to_address    "0.0.0.0"               # optional, IPv4 or IPv6
-    # max_clients        "0"                     # optional 0=no limit
+#	type		"httpd"
+#	name		"My HTTP Stream"
+#	encoder		"vorbis"		# optional, vorbis or lame
+#	port		"8000"
+#	bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
+##	quality		"5.0"			# do not define if bitrate is defined
+#	bitrate		"128"			# do not define if quality is defined
+#	format		"44100:16:1"
+#	max_clients	"0"			# optional 0=no limit
 #}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
-# Please see README.Debian if you want mpd to play through the pulseaudio
-# daemon started as part of your graphical desktop session!
 #
 audio_output {
-    type        "pulse"
-    name        "PulseAudio"
-    # server      "remote_server"         # optional
-    # sink        "remote_server_sink"    # optional
+	type		"pulse"
+	name		"PulseAudio"
+##	server		"remote_server"		# optional
+##	sink		"remote_server_sink"	# optional
 }
 #
-# Example "pipe" output:
+# An example of a winmm output (Windows multimedia API).
+#
+#audio_output {
+#	type		"winmm"
+#	name		"My WinMM output"
+##	device		"Digital Audio (S/PDIF) (High Definition Audio Device)" # optional
+#		or
+##	device		"0"		# optional
+##	mixer_type	"hardware"	# optional
+#}
+#
+# An example of an openal output.
+#
+#audio_output {
+#	type		"openal"
+#	name		"My OpenAL output"
+##	device		"Digital Audio (S/PDIF) (High Definition Audio Device)" # optional
+#}
+#
+# An example of an sndio output.
+#
+#audio_output {
+#	type		"sndio"
+#	name		"sndio output"
+#	mixer_type	"software"
+#}
+#
+# An example of an OS X output:
+#
+#audio_output {
+#	type		"osx"
+#	name		"My OS X Device"
+##	device		"Built-in Output"	# optional
+##	channel_map      "-1,-1,0,1"	# optional
+#}
+#
+## Example "pipe" output:
 #
 audio_output {
-    type    "fifo"
-    name    "Visualisation"
-    path    "/tmp/mpd.fifo"
-    format  "44100:16:2"
+	type		"fifo"
+	name		"Visualisation"
+	path		"/tmp/mpd.fifo"
+	format		"44100:16:2"
 }
 #
-# If MPD has been compiled with libsamplerate support, this setting specifies
-# the sample rate converter to use.  Possible values can be found in the
-# mpd.conf man page or the libsamplerate documentation. By default, this is
-# setting is disabled.
+## An example of a null output (for no audio output):
 #
-# samplerate_converter    "Fastest Sinc Interpolator"
+#audio_output {
+#	type		"null"
+#	name		"My Null Output"
+#	mixer_type      "none"			# optional
+#}
 #
 ###############################################################################
 
@@ -278,17 +347,17 @@ audio_output {
 # See <http://www.replaygain.org> for more details about ReplayGain.
 # This setting is off by default.
 #
-replaygain           "auto"
+replaygain			"auto"
 #
 # This setting sets the pre-amp used for files that have ReplayGain tags. By
 # default this setting is disabled.
 #
-# replaygain_preamp    "0"
+#replaygain_preamp		"0"
 #
 # This setting sets the pre-amp used for files that do NOT have ReplayGain tags.
 # By default this setting is disabled.
 #
-# replaygain_missing_preamp    "0"
+#replaygain_missing_preamp	"0"
 #
 # This setting enables or disables ReplayGain limiting.
 # MPD calculates actual amplification based on the ReplayGain tags
@@ -297,27 +366,21 @@ replaygain           "auto"
 # above its original level. If replaygain_limit is disabled such amplification
 # might occur. By default this setting is enabled.
 #
-replaygain_limit     "no"
+replaygain_limit		"no"
 #
 # This setting enables on-the-fly normalization volume adjustment. This will
 # result in the volume of all playing audio to be adjusted so the output has
 # equal "loudness". This setting is disabled by default.
 #
-# volume_normalization         "no"
+#volume_normalization		"no"
 #
 ###############################################################################
-
 
 # Character Encoding ##########################################################
 #
 # If file or directory names do not display correctly for your locale then you
 # may need to modify this setting.
 #
-filesystem_charset    "UTF-8"
-#
-# This setting controls the encoding that ID3v1 tags should be converted from.
-#
-id3v1_encoding        "UTF-8"
+filesystem_charset		"UTF-8"
 #
 ###############################################################################
-
