moc: update configuration for version 2.6

--- a/moc.config
+++ b/moc.config
@@ -1,13 +1,15 @@
 # Show file titles (title, author, album) instead of file names?
 ReadTags = yes
 
-# In which directory do you store your music files?  If you specify it you will
-# be able to jump straight to this directory with the '-m' parameter or the 'm'
-# command.  This can also point to a playlist.
+# In which directory do you store your music files?  If you specify it
+# you will be able to jump straight to this directory with the '-m'
+# parameter or the 'm' command.  This can also point to a playlist.
 MusicDir = "${HOME}/Music"
 
-# Start in the music directory by default?  If set to 'no', start in the current
-# directory by default.
+# Start in the music directory by default?  If set to 'no', start
+# in the directory being viewed when the was client last active or,
+# as a last resort, the directory in which the client is being started.
+# A single directory on the command line takes precedence.
 StartInMusicDir = no
 
 # Set playback toggles.
@@ -16,11 +18,16 @@ Shuffle = no
 AutoNext = yes
 
 # Default FormatString:
+#
 #   %n - Track number
 #   %a - Artist
 #   %A - Album
 #   %t - Title
-#   %(X:TRUE:FALSE)
+#   %(X:TRUE:FALSE) - Ternary expression: if X exists, do TRUE,
+#                     otherwise FALSE.  The escape character must
+#                     be doubled (i.e., '\\').  (See zshmisc
+#                     documentation for more information.)
+#
 FormatString = "%(n:%n. :)%(a:%a - :)%(t:%t:)"
 
 # Show files with dot at the beginning?
@@ -30,7 +37,7 @@ ShowHiddenFiles = no
 HideFileExtension = no
 
 # Show file format in menu?
-#ShowFormat = yes
+ShowFormat = yes
 
 # Show file time in menu?  Possible values: 'yes', 'no' and 'IfAvailable'
 # (meaning show the time only when it is already known, which often works
@@ -43,15 +50,9 @@ ShowTimePercent = yes
 # Theme file to use.  This can be absolute path or relative to
 # /usr/share/moc/themes/ (depends on installation prefix) or
 # ~/.moc/themes/ .
-#
-# Example:    Theme = laras_theme
-#
 Theme = base16
 
 # The theme used when running on an xterm.
-#
-# Example:    XTermTheme = transparent-background
-#
 #XTermTheme =
 
 # MOC directory (where pid file, socket and state files are stored).
@@ -71,96 +72,46 @@ Theme = base16
 
 # Choose a keymap file (relative to '~/.moc/' or using an absolute path).
 # An annotated example keymap file is included ('keymap.example').
-#
-# Example:    Keymap = my_keymap
-#
-#Keymap = keymap
+#Keymap =
 
 # Use ASCII rather than graphic characters for drawing lines.  This
 # helps on some terminals.
 #ASCIILines = no
 
-# FastDirs, these allow you to jump directly to a directory.
+# FastDirs, these allow you to jump directly to a directory, the key
+# bindings are in the keymap file.
 Fastdir1 = "${HOME}/Downloads/music"
 
-# PreferredDecoders allows you to specify which decoder should be used
-# for any given audio format.  It is a colon-separated list in which
-# each entry is of the general form 'code(decoders)', where 'code'
-# identifies the audio format and 'decoders' is a comma-separated list
-# of decoders in order of preference.
-#
-# The audio format identifier may be either a filename extension or a
-# MIME media type.  If the latter, the format is 'type/subtype' (e.g.,
-# 'audio/flac').  Because different systems may give different MIME
-# media types, any 'x-' prefix of the subtype is ignored both here and
-# in the actual file MIME type (so all combinations of 'audio/flac' and
-# 'audio/x-flac' match each other).
-#
-# For Internet streams the matching is done on MIME media type and on
-# actual content.  For files the matches are made on MIME media type
-# (if the 'UseMimeMagic' option is set) and on filename extension.  The
-# MIME media type of a file is not determined until the first entry for
-# MIME is encountered in the list.
-#
-# The matching is done in the order of appearance in the list with any
-# entries added from the command line being matched before those listed
-# here.  Therefore, if you place all filename extension entries before
-# all MIME entries you will speed up MOC's processing of directories
-# (which could be significant for remote file systems).
-#
-# The decoder list may be empty, in which case no decoders will be used
-# for files (and files with that audio format ignored) while Internet
-# streams will be assessed on the actual content.  Any decoder position
-# may contain an asterisk, in which case any decoder not otherwise listed
-# which can handle the audio format will be used.  It is not an error to
-# list the same decoder twice, but neither does it make sense to do so.
-#
-# If you have a mix of audio and non-audio files in your directories, you
-# may wish to include entries at top of the list which ignore non-audio
-# files by extension.
-#
-# In summary, the PreferredDecoders option provides fine control over the
-# type of matching which is performed (filename extension, MIME media
-# type and streamed media content) and which decoder(s) (if any) are used
-# based on the option's list entries and their ordering.
-#
-# Examples:   aac(aac,ffmpeg)             first try FAAD2 for AACs then FFmpeg
-#             mp3()                       ignore MP3 files
-#             wav(*,sndfile)              use sndfile for WAV as a last resort
-#             ogg(vorbis,*):flac(flac,*)  try Xiph decoders first
-#             ogg():audio/ogg()           ignore OGG files, and
-#                                         force Internet selection by content
-#             gz():html()                 ignore some non-audio files
-#
-# Any unspecified audio formats default to trying all decoders.
-# Any unknown (or misspelt) drivers are ignored.
-# All names are case insensitive.
-# The default setting reflects the historical situation modified by
-# the experience of users.
-#
-#PreferredDecoders  = aac(aac,ffmpeg):m4a(ffmpeg)
-#PreferredDecoders += mpc(musepack,*,ffmpeg):mpc8(musepack,*,ffmpeg)
-#PreferredDecoders += sid(sidplay2):mus(sidplay2)
-#PreferredDecoders += wav(sndfile,*,ffmpeg)
-#PreferredDecoders += wv(wavpack,*,ffmpeg)
-#PreferredDecoders += audio/aac(aac):audio/aacp(aac):audio/m4a(ffmpeg)
-#PreferredDecoders += audio/wav(sndfile,*)
-
-# The following PreferredDecoders attempt to handle the ambiguity surrounding
-# container types such as OGG for files.  The first two entries will force
-# a local file to the correct decoder (assuming the .ogg file contains Vorbis
-# audio), while the MIME media types will cause Internet audio streams to
-# be assessed on content (which may be either Vorbis or Speex).
-#
-#PreferredDecoders += ogg(vorbis,ffmpeg):oga(vorbis,ffmpeg):ogv(ffmpeg)
-#PreferredDecoders += opus(opus,ffmpeg)
-#PreferredDecoders += spx(speex)
-#PreferredDecoders += application/ogg(vorbis):audio/ogg(vorbis)
+# How fast to seek (in number of seconds per keystroke).  The first
+# option is for normal seek and the second for silent seek.
+SeekTime = 1
+SilentSeekTime = 5
 
 # Number items in the playlist.
 PlaylistNumbering = no
 
-# Main window layouts.
+# Main window layouts can be configured.  You can change the position and
+# size of the menus (directory and playlist).  You have three layouts and
+# can switch between then using the 'l' key (standard mapping).  By default,
+# only two layouts are configured.
+#
+# The format is as follows:
+#
+#     - Each layout is described as a list of menu entries.
+#     - Each menu entry is of the form:
+#
+#           menu(position_x, position_y, width, height)
+#
+#       where 'menu' is either 'directory' or 'playlist'.
+#     - The parameters define position and size of the menu.  They can
+#       be absolute numbers (like 10) or a percentage of the screen size
+#       (like 45%).
+#     - 'width' and 'height' can have also value of 'FILL' which means
+#        fill the screen from the menu's position to the border.
+#     - Menus may overlap.
+#
+# You must describe at least one menu (default is to fill the whole window).
+# There must be at least one layout (Layout1) defined; others can be empty.
 Layout1 = directory(0,0,50%,100%):playlist(50%,0,FILL,100%)
 Layout2 = directory(0,0,100%,100%)
 Layout3 = directory(0,0,100%,90%):playlist(0,90%,100%,10%)
@@ -178,7 +129,12 @@ CanStartInPlaylist = yes
 # Set the terminal title when running under xterm.
 SetXtermTitle = yes
 
-# Set the terminal title when running under screen.
+# Set the terminal title when running under screen(1).  If MOC can detect
+# that it is running under screen(1), then it will set an appropriate
+# title (see description of ScreenTerms above).  However, if multiple
+# levels of screen management are involved, detection might fail and this
+# could cause a screen upset.  In that situation you can use this option
+# to force screen titles off.
 SetScreenTitle = yes
 
 # Display full paths instead of just file names in the playlist.
