--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@ mutt/accounts/gmail filter=mail
 mutt/accounts/outlook filter=mail
 mutt/muttrc filter=mail
 msmtprc filter=mail
-notmuch-config filter=mail
+notmuch.config filter=mail
 reportbugrc filter=mail
