--- a/ncmpcpp.config
+++ b/ncmpcpp.config
@@ -6,14 +6,14 @@
 ## ncmpcpp.
 ##
 #
-#ncmpcpp_directory = ~/.ncmpcpp
+ncmpcpp_directory = ~/.local/share/ncmpcpp
 #
 ##
 ## Directory for storing downloaded lyrics. It defaults to ~/.lyrics since other
 ## MPD clients (eg. ncmpc) also use that location.
 ##
 #
-lyrics_directory = ~/.ncmpcpp/lyrics
+lyrics_directory = ~/.local/share/lyrics
 #
 ##### connection settings #####
 #
