polybar: fix volume module

--- a/polybar.config
+++ b/polybar.config
@@ -148,7 +148,7 @@ label-layout-foreground = ${colours.fg_alt}
 
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
 format-volume = <ramp-volume> <label-volume>
 format-volume-margin = 1
