polybar: remove icon tray; too buggy

--- a/polybar.config
+++ b/polybar.config
@@ -38,7 +38,7 @@ modules-left = bspwm mpd
 modules-center =
 modules-right = xwindow wlan keyboard volume battery date clock powermenu
 
-tray-position = right
+tray-position =
 tray-padding = 0
 
 wm-restack = bspwm
