polybar: fix override-redirect option

--- a/polybar.config
+++ b/polybar.config
@@ -12,7 +12,7 @@ red = #ae110c
 screenchange-reload = true
 
 [bar/panel]
-override_redirect = true
+override-redirect = true
 
 width = 100%
 height = 30
