polybar: use pulseaudio module instead of alsa

--- a/polybar.config
+++ b/polybar.config
@@ -147,15 +147,15 @@ label-layout-foreground = ${colours.fg_alt}
 
 
 [module/volume]
-type = internal/alsa
+type = internal/pulseaudio
 
 format-volume = <ramp-volume> <label-volume>
 format-volume-margin = 1
 
-format-muted-margin = 1
-
 label-volume = %percentage%%
 label-volume-foreground = ${colours.fg_alt}
+
+format-muted-margin = 1
 
 label-muted = 
 label-muted-foreground = ${colours.status_icon}
