conky: simplify mount points

--- a/host-osilon/conky.conf
+++ b/host-osilon/conky.conf
@@ -91,46 +91,46 @@ ${color5}${wireless_essid wlp2s0}${color}
 ${voffset -15}${offset 100}Signal: ${color1}${wireless_link_qual_perc wlp2s0}%${color}${alignr}Bitrate: ${color1}${wireless_bitrate wlp2s0}${color}
 ${endif}\
 ${voffset 10}
-/
+debian
 ${voffset -15}${offset 100}${color3}${fs_used /}${color} / ${fs_size /}${alignr}${fs_used_perc /}%
 ${fs_bar /}
-${if_mounted /boot}/boot
+${if_mounted /boot}boot
 ${voffset -15}${offset 100}${color3}${fs_used /boot}${color} / ${fs_size /boot}${alignr}${fs_used_perc /boot}%
 ${fs_bar /boot}
 ${endif}\
-${if_mounted /home}/home
+${if_mounted /home}home
 ${voffset -15}${offset 100}${color3}${fs_used /home}${color} / ${fs_size /home}${alignr}${fs_used_perc /home}%
 ${fs_bar /home}
 ${endif}\
-${if_mounted /media/lacie25}/media/lacie25
+${if_mounted /media/lacie25}lacie25
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie25}${color} / ${fs_size /media/lacie25}${alignr}${fs_used_perc /media/lacie25}%
 ${fs_bar /media/lacie25}
 ${endif}\
-${if_mounted /media/lacie35}/media/lacie35
+${if_mounted /media/lacie35}lacie35
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie35}${color} / ${fs_size /media/lacie35}${alignr}${fs_used_perc /media/lacie35}%
 ${fs_bar /media/lacie35}
 ${endif}\
-${if_mounted /media/toshiba}/media/toshiba
+${if_mounted /media/toshiba}toshiba
 ${voffset -15}${offset 100}${color3}${fs_used /media/toshiba}${color} / ${fs_size /media/toshiba}${alignr}${fs_used_perc /media/toshiba}%
 ${fs_bar /media/toshiba}
 ${endif}\
-${if_mounted /media/wdultra}/media/wdultra
+${if_mounted /media/wdultra}wdultra
 ${voffset -15}${offset 100}${color3}${fs_used /media/wdultra}${color} / ${fs_size /media/wdultra}${alignr}${fs_used_perc /media/wdultra}%
 ${fs_bar /media/wdultra}
 ${endif}\
-${if_mounted /media/mp1}/media/mp1
+${if_mounted /media/mp1}mp1
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp1}${color} / ${fs_size /media/mp1}${alignr}${fs_used_perc /media/mp1}%
 ${fs_bar /media/mp1}
 ${endif}\
-${if_mounted /media/mp2}/media/mp2
+${if_mounted /media/mp2}mp2
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp2}${color} / ${fs_size /media/mp2}${alignr}${fs_used_perc /media/mp2}%
 ${fs_bar /media/mp2}
 ${endif}\
-${if_mounted /media/mp3}/media/mp3
+${if_mounted /media/mp3}mp3
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp3}${color} / ${fs_size /media/mp3}${alignr}${fs_used_perc /media/mp3}%
 ${fs_bar /media/mp3}
 ${endif}\
-${if_mounted /media/mp4}/media/mp4
+${if_mounted /media/mp4}mp4
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp4}${color} / ${fs_size /media/mp4}${alignr}${fs_used_perc /media/mp4}%
 ${fs_bar /media/mp4}
 ${endif}
