--- a/host-doru-areaba/conky.conf
+++ b/host-doru-areaba/conky.conf
@@ -72,6 +72,9 @@ ${voffset 10}
 RAM:
 ${voffset -15}${offset 100}${color4}${mem}${color} / ${memmax}${alignr}${memperc}%
 ${membar}
+Swap:
+${voffset -15}${offset 100}${color3}${swap}${color} / ${swapmax}${alignr}${swapperc}%
+${swapbar}
 ${color4}${top_mem name 1}
 ${voffset -15}${offset 150}${top_mem pid 1}${alignr}${top_mem mem 1}%${color}
 ${voffset -1}${color3}${top_mem name 2}
@@ -90,13 +93,23 @@ ${else}${color3}${new_mails $HOME/.mail/Gmail/Inbox} new mails${color}${endif}${
 Outlook: ${alignr}${if_match ${new_mails $HOME/.mail/Outlook/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Outlook/Inbox} == 1}${color3}1 new mail${color}\
 ${else}${color3}${new_mails $HOME/.mail/Outlook/Inbox} new mails${color}${endif}${endif}
-${if_up enp37s0}
-${voffset 20}${downspeedgraph enp37s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp37s0 35,140 669900 669900}
+${if_up enp4s0}
+${voffset 20}${downspeedgraph enp4s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp4s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
-${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp37s0}${font}
+${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp4s0}${font}
 ${voffset -20}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
-${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp37s0}${font}
+${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp4s0}${font}
 ${voffset 30}\
+${endif}\
+${if_up wlp3s0}
+${voffset 20}${downspeedgraph wlp3s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph wlp3s0 35,140 669900 669900}
+${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
+${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf wlp3s0}${font}
+${voffset -20}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
+${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf wlp3s0}${font}
+${voffset 30}
+${color5}${wireless_essid wlp3s0}${color}
+${voffset -15}${offset 100}Signal: ${color1}${wireless_link_qual_perc wlp3s0}%${color}${alignr}Bitrate: ${color1}${wireless_bitrate wlp3s0}${color}
 ${endif}\
 ${voffset 10}
 debian
@@ -105,10 +118,6 @@ ${fs_bar /}
 ${if_mounted /boot}boot
 ${voffset -15}${offset 100}${color3}${fs_used /boot}${color} / ${fs_size /boot}${alignr}${fs_used_perc /boot}%
 ${fs_bar /boot}
-${endif}\
-${if_mounted /home/panagiotis/Videos}media
-${voffset -15}${offset 100}${color3}${fs_used /home/panagiotis/Videos}${color} / ${fs_size /home/panagiotis/Videos}${alignr}${fs_used_perc /home/panagiotis/Videos}%
-${fs_bar /home/panagiotis/Videos}
 ${endif}\
 ${if_mounted /media/lacie25}lacie25
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie25}${color} / ${fs_size /media/lacie25}${alignr}${fs_used_perc /media/lacie25}%
