--- a/host-doru-areaba/polybar.config
+++ b/host-doru-areaba/polybar.config
@@ -35,7 +35,7 @@ font-2 = Symbola:size=10;2
 
 modules-left = bspwm mpd
 modules-center =
-modules-right = xwindow eth keyboard volume date clock powermenu
+modules-right = xwindow wlan keyboard volume battery date clock powermenu
 
 tray-position =
 tray-padding = 0
@@ -115,20 +115,23 @@ label-maxlen = 50
 label-margin-right = 2
 
 
-[module/eth]
+[module/wlan]
 type = internal/network
-interface = enp37s0
+interface = wlp3s0
 interval = 10
 
 format-connected = <label-connected>
 format-connected-margin = 1
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colours.status_icon}
 
-label-connected = %local_ip%
+format-disconnected-margin = 1
+
+label-connected = %essid%
 label-connected-foreground = ${colours.fg_alt}
 
-format-disconnected =
+label-disconnected = " "
+label-disconnected-foreground = ${colours.status_icon}
 
 
 [module/keyboard]
@@ -161,6 +164,33 @@ ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
 ramp-volume-foreground = ${colours.status_icon}
+
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = AC0
+poll-interval = 30
+
+format-charging = <ramp-capacity> <label-charging>
+format-charging-padding = 1
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-padding = 1
+
+format-full = <ramp-capacity> <label-full>
+format-full-padding = 1
+
+label-charging-foreground = ${colours.fg_alt}
+label-discharging-foreground = ${colours.fg_alt}
+label-full-foreground = ${colours.fg_alt}
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-foreground = ${colours.status_icon}
 
 
 [module/date]
