--- a/offlineimap.service
+++ b/offlineimap.service
@@ -3,6 +3,7 @@ Description=Offlineimap Service
 
 [Service]
 Type=oneshot
+Environment=NOTMUCH_CONFIG=%h/.config/notmuch/config
 ExecStart=/usr/bin/offlineimap -o -u syslog
 # Give 12 seconds for offlineimap to gracefully stop before hard killing it.
 TimeoutStopSec=12
