--- a/offlineimap.config
+++ b/offlineimap.config
@@ -7,7 +7,7 @@ pythonfile = ~/.local/share/offlineimap/offlineimap.py
 
 [mbnames]
 enabled = yes
-filename = ~/.mutt/mailboxes
+filename = ~/.local/share/neomutt/mailboxes
 header = "mailboxes \\\n  "
 peritem = "+%(accountname)s/%(foldername)s"
 sep = " \\\n  "
