tmux: fix scroll issues

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,25 @@ set -gw mode-keys vi
 # mouse support
 set -g mouse on
 
-bind -n WheelUpPane   if -Ft= "#{?mouse_any_flag,1,#{?alternate_on,1,#{pane_in_mode}}}" "select-pane -t=; send-keys -M" "select-pane -t=; copy-mode -e; send-keys -M"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n WheelUpPane \
+    if -Ft= "#{mouse_any_flag}" \
+        "send -Mt=" \
+        "if -Ft= '#{alternate_on}' \
+            'send -N 3 -t= up' \
+            \"if -Ft= '#{pane_in_mode}' \
+                'send -Mt=' \
+                'copy-mode -e; send -Mt=' \
+            \" \
+        "
+
+bind -n WheelDownPane \
+    if -Ft= "#{mouse_any_flag}" \
+        "send -Mt" \
+        "if -Ft= '#{alternate_on}' \
+            'send -N 3 -t= down' \
+            'send -Mt=' \
+        "
+
 bind -T copy-mode-vi WheelUpPane   send -X halfpage-up
 bind -T copy-mode-vi WheelDownPane send -X halfpage-down
 
