tmux: allow vim to change the cursor shape

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "tmux-256color"
-set -g terminal-overrides "xterm-256color:Tc"
+set -g terminal-overrides '*:Tc:Ss=\E[%p1%d q:Se=\E[ q'
 set -g default-command "${SHELL}"
 set -g escape-time 0
 set -g history-limit 4096
