polybar: show tray in the center

--- a/polybar.config
+++ b/polybar.config
@@ -37,7 +37,7 @@ modules-left = bspwm mpd
 modules-center =
 modules-right = xwindow eth keyboard volume date clock powermenu
 
-tray-position =
+tray-position = center
 tray-padding = 0
 
 wm-restack = bspwm
