--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g escape-time 0
 set -g history-limit 4096
 set -g set-titles on
 set -g set-titles-string "#W"
+set -g allow-rename on
 set -g base-index 1
 set -g renumber-windows on
 set -gw mode-keys vi
