--- a/dirmngr.conf
+++ b/dirmngr.conf
@@ -1,5 +1,4 @@
-keyserver hkps://hkps.pool.sks-keyservers.net
-hkp-cacert /usr/share/gnupg/sks-keyservers.netCA.pem
+keyserver hkps://keys.openpgp.org
 log-file /home/panagiotis/.gnupg/dirmngr.log
 debug-level basic
 verbose
