--- a/alacritty.yml
+++ b/alacritty.yml
@@ -60,7 +60,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: Windowed
+  startup_mode: Maximized
 
   # Window title
   #title: Alacritty
@@ -87,15 +87,6 @@ scrolling:
   # scrollback is enabled (history > 0).
   multiplier: 3
 
-  # Faux Scrolling
-  #
-  # The `faux_multiplier` setting controls the number of lines the terminal
-  # should scroll when the alternate screen buffer is active. This is used
-  # to allow mouse scrolling for applications like `man`.
-  #
-  # Specifying `0` will disable faux scrolling.
-  faux_multiplier: 3
-
   # Scroll to the bottom when new text is written to the terminal.
   auto_scroll: false
 
@@ -108,7 +99,7 @@ scrolling:
 # change the `it` value in terminfo when altering this setting.
 tabspaces: 4
 
-# Font configuration (changes require restart)
+# Font configuration
 font:
   # Normal (roman) font face
   normal:
@@ -267,7 +258,7 @@ colors:
   # Example:
   #   `- { index: 16, color: '0xff00ff' }`
   #
-  indexed_colors: []
+  #indexed_colors: []
 
 # Visual Bell
 #
@@ -360,12 +351,12 @@ enable_experimental_conpty_backend: false
 # Send ESC (\x1b) before characters when alt is pressed.
 alt_send_esc: true
 
-debug:
+#debug:
   # Display the time it takes to redraw each frame.
-  render_timer: false
+  #render_timer: false
 
   # Keep the log file after quitting Alacritty.
-  persistent_logging: false
+  #persistent_logging: false
 
   # Log level
   #
@@ -376,13 +367,13 @@ debug:
   #   - Info
   #   - Debug
   #   - Trace
-  log_level: Warn
+  #log_level: Warn
 
   # Print all received window events.
-  print_events: false
+  #print_events: false
 
   # Record all characters and escape sequences as test data.
-  ref_test: false
+  #ref_test: false
 
 mouse:
   # Click settings
@@ -456,7 +447,7 @@ mouse_bindings:
 #    - Key0-Key9
 #
 #    A full list with available key codes can be found here:
-#    https://docs.rs/glutin/*/glutin/enum.VirtualKeyCode.html#variants
+#    https://docs.rs/glutin/*/glutin/event/enum.VirtualKeyCode.html#variants
 #
 #    Instead of using the name of the keys, the `key` field also supports using
 #    the scancode of the desired key. Scancodes have to be specified as a
@@ -496,6 +487,7 @@ mouse_bindings:
 #   - ToggleFullscreen
 #   - SpawnNewInstance
 #   - ClearLogNotice
+#   - ReceiveChar
 #   - None
 #
 #   (macOS only):
@@ -536,7 +528,8 @@ mouse_bindings:
 #
 # Bindings are always filled by default, but will be replaced when a new
 # binding with the same triggers is defined. To unset a default binding, it can
-# be mapped to the `None` action.
+# be mapped to the `ReceiveChar` action. Alternatively, you can use `None` for
+# a no-op if you do not wish to receive input characters for that binding.
 key_bindings:
   # (Windows/Linux only)
   - { key: V,        mods: Control|Shift, action: Paste            }
