--- a/host-doru-areaba/polybar.config
+++ b/host-doru-areaba/polybar.config
@@ -37,7 +37,7 @@ modules-left = bspwm mpd
 modules-center =
 modules-right = xwindow wlan keyboard volume battery date clock powermenu
 
-tray-position =
+tray-position = center
 tray-padding = 0
 
 wm-restack = bspwm
