conky: tidy up the config file

--- a/conky.conf
+++ b/conky.conf
@@ -8,7 +8,7 @@ conky.config = {
 
 	own_window = true,
 	own_window_type = 'desktop',
-	own_window_colour = '#ffffff',
+	own_window_colour = 'ffffff',
 	own_window_title = 'conky',
 	minimum_width = 300,
 	maximum_width = 300,
@@ -25,40 +25,36 @@ conky.config = {
 	use_xft = true,
 	font = 'DejaVu Sans:size=10',
 
-	default_color = '#111111',
+	default_color = '111111',
 
 --blue
-	color1 = '#0099cc',
+	color1 = '0099cc',
 --green
-	color2 = '#669900',
+	color2 = '669900',
 --orange
-	color3 = '#ff8800',
+	color3 = 'ff8800',
 --red
-	color4 = '#cc0000',
+	color4 = 'cc0000',
 --purple
-	color5 = '#9933cc',
+	color5 = '9933cc',
 };
 
 conky.text = [[
 ${voffset 10}${cpugraph cpu1 40,140 0099cc 0099cc}${alignr}${cpugraph cpu5 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu1}%${font}
-${voffset -26}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 2}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu5}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu5}%${font}
 ${voffset 18}
 ${voffset 10}${cpugraph cpu2 40,140 0099cc 0099cc}${alignr}${cpugraph cpu6 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu2}%${font}
-${voffset -26}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 3}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu6}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu6}%${font}
 ${voffset 18}
 ${voffset 10}${cpugraph cpu3 40,140 0099cc 0099cc}${alignr}${cpugraph cpu7 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu3}%${font}
-${voffset -26}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 4}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu7}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu7}%${font}
 ${voffset 18}
 ${voffset 10}${cpugraph cpu4 40,140 0099cc 0099cc}${alignr}${cpugraph cpu8 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu4}%${font}
-${voffset -26}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 5}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu8}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu8}%${font}
 ${voffset 18}
 ${color4}${top name 1}
 ${voffset -15}${offset 150}${top pid 1}${alignr}${top cpu 1}%${color}
@@ -82,7 +78,7 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -15}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-ACPI Temperature: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
+Temperature: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
 ${voffset -5}
 Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
@@ -94,7 +90,7 @@ ${if_up enp37s0}
 ${voffset 20}${downspeedgraph enp37s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp37s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
 ${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp37s0}${font}
-${voffset -20}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
+${voffset -23}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
 ${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp37s0}${font}
 ${voffset 30}\
 ${endif}\
