polybar: big revamp; adding transparency

--- a/polybar.config
+++ b/polybar.config
@@ -1,12 +1,16 @@
 [colours]
+ddgray = #75191b21
+dgray = #752f343f
+gray = #cc454c5c
+lgray = #cca0a4ae
+llgray = #ccd3dae3
+white = #cce7e8eb
 bg = #191b21
-bg_alt = #2f343f
 fg = #e7e8eb
-fg_alt = #d3dae3
-empty_icon = #454c5c
-status_icon = #5c616c
-blue = #1f62b0
-red = #ae110c
+blue = #cc1f62b0
+red_bg = #75ae110c
+red_fg = #ccae110c
+
 
 [bar/panel]
 override-redirect = true
@@ -16,26 +20,25 @@ height = 30
 offset-x = 0
 offset-y = 0
 
-background = ${colours.bg}
-foreground = ${colours.fg}
+background = ${colours.ddgray}
+foreground = ${colours.white}
 
-padding-left = 0
-padding-right = 1
+padding = 0
 module-margin = 0
 
-underline-size = 2
-underline-color = ${colours.blue}
+underline-size = 3
+underline-color = ${colours.dgray}
 
-font-0 = DejaVuSansMono:size=10;2
-font-1 = FontAwesome:size=10;2
-font-2 = Symbola:size=10;2
+font-0 = FontAwesome:size=10;2
+font-1 = DejaVuSansMono:size=10;2
 
 modules-left = bspwm mpd
 modules-center =
-modules-right = xwindow eth keyboard volume date clock powermenu
+modules-right = keyboard sep1 eth sep2 volume sep3 date sep4 clock
 
-tray-position = center
+tray-position = right
 tray-padding = 0
+tray-background = ${colours.blue}
 
 wm-restack = bspwm
 
@@ -53,63 +56,92 @@ ws-icon-6 = other;
 ws-icon-7 = mail;
 ws-icon-8 = chat;
 ws-icon-9 = music;
-ws-icon-default = 
+ws-icon-default = 
 
-format = <label-monitor> <label-state> <label-mode>
-format-margin = 1
-
-label-monitor = %name%
-label-monitor-foreground = ${colours.bg}
-label-monitor-background = ${colours.blue}
-label-monitor-padding = 1
+format = "%{+u}  <label-state>%{+u}%{u-}  <label-mode> %{-u}"
 
 label-focused = %icon%
-label-focused-background = ${colours.bg_alt}
+label-focused-background = ${colours.dgray}
 label-focused-underline = ${colours.blue}
-label-focused-padding = 1
+label-focused-padding = 3
 
 label-occupied = %icon%
-label-occupied-padding = 1
+label-occupied-underline = ${colours.dgray}
+label-occupied-padding = 3
 
 label-urgent = %icon%
-label-urgent-background = ${colours.red}
-label-urgent-padding = 1
+label-urgent-background = ${colours.red_bg}
+label-urgent-underline = ${colours.llgray}
+label-urgent-padding = 3
 
 label-empty = %icon%
-label-empty-foreground = ${colours.empty_icon}
-label-empty-padding = 1
+label-empty-foreground = ${colours.gray}
+label-empty-underline = ${colours.dgray}
+label-empty-padding = 3
 
-label-monocle = 
+label-monocle = "  "
 label-monocle-foreground = ${colours.blue}
+label-monocle-padding = 1
+
+label-floating = "  "
+label-floating-foreground = ${colours.blue}
+label-floating-padding = 1
+
+label-locked = "  "
+label-locked-foreground = ${colours.red_fg}
+label-locked-padding = 1
 
 
 [module/mpd]
 type = internal/mpd
 
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next> <label-song>
-format-online-background = ${colours.bg_alt}
-format-online-padding = 1
+format-online = "<icon-prev>  <icon-stop>  <toggle>  <icon-next>    <icon-random> <icon-repeat> <icon-single> <icon-consume>    <label-song> <label-time>"
+format-online-background = ${colours.dgray}
+format-online-padding = 3
 
-format-offline-background = ${colours.bg_alt}
-format-offline-padding = 1
+format-stopped = "<icon-play>"
 
+format-offline = "<label-offline>"
+format-offline-background = ${colours.dgray}
+format-offline-padding = 3
+
+label-song = "%artist% - %title%"
 label-song-maxlen = 50
+label-time = "(%elapsed:05%/%total:05%)"
+label-offline = "  Offline"
 
-icon-prev = 
+icon-prev = 
 icon-stop = 
 icon-play = 
-icon-pause = 
-icon-next = 
+icon-pause =  
+icon-next = 
+icon-random = 
+icon-repeat = 
+icon-single = 
+icon-consume = 
+
+toggle-on-foreground = ${colours.lgray}
+toggle-off-foreground = ${colours.gray}
 
 
-[module/xwindow]
-type = internal/xwindow
+[module/separator]
+type = custom/text
+content = "|"
+content-foreground = ${colours.gray}
 
-format-foreground = ${colours.fg_alt}
 
-label = %title%
-label-maxlen = 50
-label-margin-right = 2
+[module/keyboard]
+type = internal/xkeyboard
+
+format = <label-layout>
+format-margin = 2
+format-prefix = "  "
+
+label-layout = %layout%
+
+
+[module/sep1]
+inherit = module/separator
 
 
 [module/eth]
@@ -118,99 +150,69 @@ interface = enp37s0
 interval = 10
 
 format-connected = <label-connected>
-format-connected-margin = 1
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colours.status_icon}
+format-connected-margin = 2
+format-connected-prefix = "  "
 
 label-connected = %local_ip%
-label-connected-foreground = ${colours.fg_alt}
 
-format-disconnected =
+format-disconnected = <label-disconnected>
+format-disconnected-margin = 2
+format-disconnected-prefix = "  "
+format-disconnected-foreground = ${colours.red_fg}
+
+label-disconnected = "Disconnected"
 
 
-[module/keyboard]
-type = internal/xkeyboard
-
-format = <label-layout>
-format-margin = 1
-format-prefix = " "
-format-prefix-foreground = ${colours.status_icon}
-
-label-layout = %layout%
-label-layout-foreground = ${colours.fg_alt}
+[module/sep2]
+inherit = module/separator
 
 
 [module/volume]
 type = internal/pulseaudio
 
-format-volume = <ramp-volume> <label-volume>
-format-volume-margin = 1
+format-volume = "<ramp-volume> <label-volume>"
+format-volume-margin = 2
 
 label-volume = %percentage%%
-label-volume-foreground = ${colours.fg_alt}
 
-format-muted-margin = 1
+format-muted-margin = 2
 
 label-muted = 
-label-muted-foreground = ${colours.status_icon}
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-foreground = ${colours.status_icon}
+ramp-volume-0 = " "
+ramp-volume-1 = " "
+ramp-volume-2 = " "
+
+
+[module/sep3]
+inherit = module/separator
 
 
 [module/date]
 type = internal/date
 interval = 5
 
-format-margin = 1
-format-prefix = " "
-format-prefix-foreground = ${colours.status_icon}
+format-margin = 2
+format-prefix = "  "
 
 label = %date%
-label-foreground = ${colours.fg_alt}
 
 date = %a, %b %d
+
+
+[module/sep4]
+inherit = module/separator
 
 
 [module/clock]
 type = internal/date
 interval = 5
 
-format-margin = 1
-format-prefix = " "
-format-prefix-foreground = ${colours.status_icon}
+format-margin = 2
+format-prefix = "  "
 
 label = %time%
-label-foreground = ${colours.fg_alt}
 
 time = %R %Z
-
-
-[module/powermenu]
-type = custom/menu
-
-label-open = 
-label-open-foreground = ${colours.red}
-
-label-close =  cancel
-label-close-foreground = ${colours.red}
-
-label-separator = │
-label-separator-foreground = ${colours.status_icon}
-
-menu-0-0 = logout
-menu-0-0-exec = loginctl terminate-session $XDG_SESSION_ID
-menu-0-0-foreground = ${colours.fg_alt}
-menu-0-1 = suspend
-menu-0-1-exec = systemctl suspend
-menu-0-1-foreground = ${colours.fg_alt}
-menu-0-2 = reboot
-menu-0-2-exec = systemctl reboot
-menu-0-2-foreground = ${colours.fg_alt}
-menu-0-3 = power off
-menu-0-3-exec = systemctl poweroff
-menu-0-3-foreground = ${colours.fg_alt}
 
 ; vim:ft=dosini
