conky: fix position and add transparency

--- a/conky.conf
+++ b/conky.conf
@@ -8,14 +8,15 @@ conky.config = {
 
 	own_window = true,
 	own_window_type = 'desktop',
-	own_window_colour = 'ffffff',
+	own_window_argb_visual = true,
+	own_window_argb_value = 100,
 	own_window_title = 'conky',
 	minimum_width = 300,
 	maximum_width = 300,
 
 	alignment = 'top_left',
 	gap_x = 16,
-	gap_y = 44,
+	gap_y = 47,
 
 	border_inner_margin = 15,
 
@@ -25,7 +26,7 @@ conky.config = {
 	use_xft = true,
 	font = 'DejaVu Sans:size=10',
 
-	default_color = '111111',
+	default_color = 'abb5c2',
 
 --blue
 	color1 = '0099cc',
