compton: change some settings to fix unresponsive system on resume

--- a/compton.conf
+++ b/compton.conf
@@ -1,7 +1,11 @@
 backend = "glx";
-vsync = "opengl-swc";
-paint-on-overlay = true;
+vsync = "opengl";
+paint-on-overlay = false;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
-glx-swap-method = "buffer-age";
-xrender-sync-fence = true;
+glx-copy-from-front = false;
+glx-swap-method = "undefined";
+mark-wmwin-focused = false;
+mark-ovredir-focused = false;
+use-ewmh-active-win = true;
+xrender-sync-fence = false;
