mbsync: move from offlineimap to mbsync
OfflineIMAP uses Python 2 which is now eol and it will be removed from
Debian in the near future and there are no plans to convert it to Python
3.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 neomutt/accounts/gmail filter=mail
 neomutt/accounts/outlook filter=mail
 neomutt/neomuttrc filter=mail
+mbsyncrc filter=mail
 msmtp.config filter=mail
 notmuch.config filter=mail
 reportbugrc filter=mail
