--- a/notmuch.config
+++ b/notmuch.config
@@ -49,7 +49,7 @@ other_email=$username$@hotmail.com;$username$@outlook.com;
 #
 [new]
 tags=unread;inbox;
-ignore=.offlineimap;Trash;
+ignore=.mbsync;.uidvalidity;Trash;
 
 # Search configuration
 #
