fontconfig: lots of changes

--- a/fonts.conf
+++ b/fonts.conf
@@ -1,49 +1,139 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-    <match target="font" >
-        <edit mode="assign" name="rgba" >
+    <match target="font">
+        <edit mode="assign" name="rgba">
             <const>rgb</const>
         </edit>
-        <edit mode="assign" name="hinting" >
+        <edit mode="assign" name="hinting">
             <bool>true</bool>
         </edit>
-        <edit mode="assign" name="hintstyle" >
+        <edit mode="assign" name="hintstyle">
             <const>hintslight</const>
         </edit>
-        <edit mode="assign" name="antialias" >
+        <edit mode="assign" name="antialias">
             <bool>true</bool>
         </edit>
         <edit mode="assign" name="lcdfilter">
             <const>lcddefault</const>
         </edit>
     </match>
-    <alias>
+    <!-- Fira Code -->
+    <alias binding="strong">
+        <family>Fira Code</family>
+        <default>
+            <family>monospace</family>
+        </default>
+    </alias>
+    <match target="pattern">
+        <test compare="eq" name="family">
+            <string>sans-serif</string>
+        </test>
+        <test compare="eq" ignore-blanks="true" name="family">
+            <string>Fira Code</string>
+        </test>
+        <edit mode="delete" name="family" binding="strong"/>
+    </match>
+    <match target="font">
+        <test compare="eq" ignore-blanks="true" name="family">
+            <string>Fira Code</string>
+        </test>
+        <edit mode="assign" name="fontfeatures" binding="strong">
+            <string>ss01</string>
+            <string>ss03</string>
+            <string>ss05</string>
+        </edit>
+    </match>
+    <!-- Generic family names -->
+    <alias binding="strong">
         <family>serif</family>
         <prefer>
-            <family>Noto Serif</family>
-            <family>Twitter Color Emoji</family>
-        </prefer>
-        <default>
             <family>DejaVu Serif</family>
-        </default>
+            <family>Noto Serif</family>
+            <family>Noto Serif CJK JP</family>
+            <family>Noto Serif CJK KR</family>
+            <family>Noto Serif CJK SC</family>
+            <family>Noto Serif CJK TC</family>
+            <family>Noto Serif CJK HK</family>
+        </prefer>
+        <accept>
+            <family>Font Awesome 5 Pro</family>
+            <family>Font Awesome 5 Free</family>
+            <family>Font Awesome 5 Brands</family>
+            <family>FontAwesome</family>
+            <family>forkawesome</family>
+            <family>Material Icons</family>
+        </accept>
     </alias>
-    <alias>
+    <alias binding="strong">
         <family>sans-serif</family>
         <prefer>
-            <family>Noto Sans</family>
-            <family>Twitter Color Emoji</family>
-        </prefer>
-        <default>
+            <family>Open Sans</family>
+            <family>Noto Color Emoji</family>
             <family>DejaVu Sans</family>
-        </default>
+            <family>Noto Sans</family>
+            <family>Noto Sans CJK JP</family>
+            <family>Noto Sans CJK KR</family>
+            <family>Noto Sans CJK SC</family>
+            <family>Noto Sans CJK TC</family>
+            <family>Noto Sans CJK HK</family>
+        </prefer>
+        <accept>
+            <family>Font Awesome 5 Pro</family>
+            <family>Font Awesome 5 Free</family>
+            <family>Font Awesome 5 Brands</family>
+            <family>FontAwesome</family>
+            <family>forkawesome</family>
+            <family>Material Icons</family>
+        </accept>
     </alias>
-    <alias>
+    <alias binding="strong">
         <family>monospace</family>
         <prefer>
             <family>DejaVu Sans Mono</family>
             <family>Noto Mono</family>
+            <family>Noto Sans Mono</family>
         </prefer>
+        <accept>
+            <family>PowerlineSymbols</family>
+        </accept>
     </alias>
-
+    <!-- Add emoji generic family -->
+    <alias binding="strong">
+        <family>emoji</family>
+        <default>
+            <family>Twemoji Mozilla</family>
+            <family>Noto Color Emoji</family>
+        </default>
+    </alias>
+    <!-- Alias requests for the other emoji fonts -->
+    <alias binding="strong">
+        <family>Apple Color Emoji</family>
+        <prefer>
+            <family>Twemoji Mozilla</family>
+            <family>Noto Color Emoji</family>
+        </prefer>
+        <default>
+            <family>sans-serif</family>
+        </default>
+    </alias>
+    <alias binding="strong">
+        <family>Segoe UI Emoji</family>
+        <prefer>
+            <family>Twemoji Mozilla</family>
+            <family>Noto Color Emoji</family>
+        </prefer>
+        <default>
+            <family>sans-serif</family>
+        </default>
+    </alias>
+    <alias binding="strong">
+        <family>Noto Color Emoji</family>
+        <prefer>
+            <family>Twemoji Mozilla</family>
+        </prefer>
+        <default>
+            <family>sans-serif</family>
+        </default>
+    </alias>
 </fontconfig>
