picom: update compton to picom

--- a/picom.conf
+++ b/picom.conf
@@ -1,10 +1,7 @@
 backend = "glx";
-vsync = "opengl";
-paint-on-overlay = false;
+vsync = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
-glx-copy-from-front = false;
-glx-swap-method = "undefined";
 mark-wmwin-focused = false;
 mark-ovredir-focused = false;
 use-ewmh-active-win = true;
