tmux: fix WheelDownPane binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ bind -n WheelUpPane \
 
 bind -n WheelDownPane \
     if -Ft= "#{mouse_any_flag}" \
-        "send -Mt" \
+        "send -Mt=" \
         "if -Ft= '#{alternate_on}' \
             'send -N 3 -t= down' \
             'send -Mt=' \
